--- a/web-application/client/components/generic/list/List.css
+++ b/web-application/client/components/generic/list/List.css
@@ -44,7 +44,7 @@
     text-align: center;
 }
 
-@media ( width <= 360px) {
+@media ( width < 400px) {
     .list .list-grid-content {
         box-sizing: border-box;
         grid-template-columns: repeat(auto-fit, 360px);
